--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "set NODE_ENV=production && node server.js"
   },
@@ -15,6 +15,7 @@
     "next-routes": "^1.4.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-typed": "^1.2.0",
     "reactstrap": "^8.6.0",
     "sass": "^1.27.0"
   }
