--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "set NODE_ENV=production && node server.js"
+    "start": "cross-env NODE_ENV=production && node server.js"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^0.11.0",
