--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-routes": "^1.4.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.10.1",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.6.0",
     "sass": "^1.27.0",
