--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^9.5.5",
     "next-routes": "^1.4.2",
     "react": "17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.10.1",
     "react-typed": "^1.2.0",
