--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.10.1",
+    "react-toastify": "^6.0.9",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.6.0",
     "sass": "^1.27.0",
