--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production && node server.js"
+    "start-dev": "cross-env NODE_ENV=production && node server.js",
+    "start" : "next start"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^0.11.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "cross-env": "^7.0.2",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
